src/lib/parser/httpspec_parser.go
// Code generated from ./src/lib/parser/httpSpec.g4 by ANTLR 4.9. DO NOT EDIT.

package parser // httpSpec

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var literalNames []string

var symbolicNames = []string{
	"", "NEWLINE", "NEWLINEWITHINDENT", "LINECOMMENT", "WHITESPACE", "HEADERFIELD",
	"ENVVARIABLE", "REQUESTSEPARATOR", "REQUESTLINE", "INPUTFILEREF", "RESPONSEHANDLER",
	"RESPONSEREF", "MESSAGE",
}

var ruleNames = []string{
	"file", "requestwithseparator", "request", "lines",
}

type httpSpecParser struct {
	*antlr.BaseParser
}

// NewhttpSpecParser produces a new parser instance for the optional input antlr.TokenStream.
//
// The *httpSpecParser instance produced may be reused by calling the SetInputStream method.
// The initial parser configuration is expensive to construct, and the object is not thread-safe;
// however, if used within a Golang sync.Pool, the construction cost amortizes well and the
// objects can be used in a thread-safe manner.
func NewhttpSpecParser(input antlr.TokenStream) *httpSpecParser {
	this := new(httpSpecParser)
	deserializer := antlr.NewATNDeserializer(nil)
	deserializedATN := deserializer.DeserializeFromUInt16(parserATN)
	decisionToDFA := make([]*antlr.DFA, len(deserializedATN.DecisionToState))
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "httpSpec.g4"

	return this
}

// httpSpecParser tokens.
const (
	httpSpecParserEOF               = antlr.TokenEOF
	httpSpecParserNEWLINE           = 1
	httpSpecParserNEWLINEWITHINDENT = 2
	httpSpecParserLINECOMMENT       = 3
	httpSpecParserWHITESPACE        = 4
	httpSpecParserHEADERFIELD       = 5
	httpSpecParserENVVARIABLE       = 6
	httpSpecParserREQUESTSEPARATOR  = 7
	httpSpecParserREQUESTLINE       = 8
	httpSpecParserINPUTFILEREF      = 9
	httpSpecParserRESPONSEHANDLER   = 10
	httpSpecParserRESPONSEREF       = 11
	httpSpecParserMESSAGE           = 12
)

// httpSpecParser rules.
const (
	httpSpecParserRULE_file                 = 0
	httpSpecParserRULE_requestwithseparator = 1
	httpSpecParserRULE_request              = 2
	httpSpecParserRULE_lines                = 3
)

// IFileContext is an interface to support dynamic dispatch.
type IFileContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFileContext differentiates from other interfaces.
	IsFileContext()
}

type FileContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFileContext() *FileContext {
	var p = new(FileContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = httpSpecParserRULE_file
	return p
}

func (*FileContext) IsFileContext() {}

func NewFileContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FileContext {
	var p = new(FileContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = httpSpecParserRULE_file

	return p
}

func (s *FileContext) GetParser() antlr.Parser { return s.parser }

func (s *FileContext) Request() IRequestContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IRequestContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IRequestContext)
}

func (s *FileContext) EOF() antlr.TerminalNode {
	return s.GetToken(httpSpecParserEOF, 0)
}

func (s *FileContext) AllREQUESTSEPARATOR() []antlr.TerminalNode {
	return s.GetTokens(httpSpecParserREQUESTSEPARATOR)
}

func (s *FileContext) REQUESTSEPARATOR(i int) antlr.TerminalNode {
	return s.GetToken(httpSpecParserREQUESTSEPARATOR, i)
}

func (s *FileContext) AllRequestwithseparator() []IRequestwithseparatorContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IRequestwithseparatorContext)(nil)).Elem())
	var tst = make([]IRequestwithseparatorContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IRequestwithseparatorContext)
		}
	}

	return tst
}

func (s *FileContext) Requestwithseparator(i int) IRequestwithseparatorContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IRequestwithseparatorContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IRequestwithseparatorContext)
}

func (s *FileContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FileContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FileContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(httpSpecListener); ok {
		listenerT.EnterFile(s)
	}
}

func (s *FileContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(httpSpecListener); ok {
		listenerT.ExitFile(s)
	}
}

func (p *httpSpecParser) File() (localctx IFileContext) {
	localctx = NewFileContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, httpSpecParserRULE_file)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(11)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == httpSpecParserREQUESTSEPARATOR {
		{
			p.SetState(8)
			p.Match(httpSpecParserREQUESTSEPARATOR)
		}

		p.SetState(13)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(14)
		p.Request()
	}
	p.SetState(18)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(15)
				p.Requestwithseparator()
			}

		}
		p.SetState(20)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext())
	}
	p.SetState(24)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == httpSpecParserREQUESTSEPARATOR {
		{
			p.SetState(21)
			p.Match(httpSpecParserREQUESTSEPARATOR)
		}

		p.SetState(26)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(27)
		p.Match(httpSpecParserEOF)
	}

	return localctx
}

// IRequestwithseparatorContext is an interface to support dynamic dispatch.
type IRequestwithseparatorContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsRequestwithseparatorContext differentiates from other interfaces.
	IsRequestwithseparatorContext()
}

type RequestwithseparatorContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRequestwithseparatorContext() *RequestwithseparatorContext {
	var p = new(RequestwithseparatorContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = httpSpecParserRULE_requestwithseparator
	return p
}

func (*RequestwithseparatorContext) IsRequestwithseparatorContext() {}

func NewRequestwithseparatorContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RequestwithseparatorContext {
	var p = new(RequestwithseparatorContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = httpSpecParserRULE_requestwithseparator

	return p
}

func (s *RequestwithseparatorContext) GetParser() antlr.Parser { return s.parser }

func (s *RequestwithseparatorContext) Request() IRequestContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IRequestContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IRequestContext)
}

func (s *RequestwithseparatorContext) AllREQUESTSEPARATOR() []antlr.TerminalNode {
	return s.GetTokens(httpSpecParserREQUESTSEPARATOR)
}

func (s *RequestwithseparatorContext) REQUESTSEPARATOR(i int) antlr.TerminalNode {
	return s.GetToken(httpSpecParserREQUESTSEPARATOR, i)
}

func (s *RequestwithseparatorContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RequestwithseparatorContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *RequestwithseparatorContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(httpSpecListener); ok {
		listenerT.EnterRequestwithseparator(s)
	}
}

func (s *RequestwithseparatorContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(httpSpecListener); ok {
		listenerT.ExitRequestwithseparator(s)
	}
}

func (p *httpSpecParser) Requestwithseparator() (localctx IRequestwithseparatorContext) {
	localctx = NewRequestwithseparatorContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, httpSpecParserRULE_requestwithseparator)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(30)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == httpSpecParserREQUESTSEPARATOR {
		{
			p.SetState(29)
			p.Match(httpSpecParserREQUESTSEPARATOR)
		}

		p.SetState(32)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(34)
		p.Request()
	}

	return localctx
}

// IRequestContext is an interface to support dynamic dispatch.
type IRequestContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsRequestContext differentiates from other interfaces.
	IsRequestContext()
}

type RequestContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRequestContext() *RequestContext {
	var p = new(RequestContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = httpSpecParserRULE_request
	return p
}

func (*RequestContext) IsRequestContext() {}

func NewRequestContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RequestContext {
	var p = new(RequestContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = httpSpecParserRULE_request

	return p
}

func (s *RequestContext) GetParser() antlr.Parser { return s.parser }

func (s *RequestContext) AllLines() []ILinesContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ILinesContext)(nil)).Elem())
	var tst = make([]ILinesContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ILinesContext)
		}
	}

	return tst
}

func (s *RequestContext) Lines(i int) ILinesContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ILinesContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ILinesContext)
}

func (s *RequestContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RequestContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *RequestContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(httpSpecListener); ok {
		listenerT.EnterRequest(s)
	}
}

func (s *RequestContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(httpSpecListener); ok {
		listenerT.ExitRequest(s)
	}
}

func (p *httpSpecParser) Request() (localctx IRequestContext) {
	localctx = NewRequestContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, httpSpecParserRULE_request)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(37)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = (((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<httpSpecParserNEWLINE)|(1<<httpSpecParserNEWLINEWITHINDENT)|(1<<httpSpecParserHEADERFIELD)|(1<<httpSpecParserREQUESTLINE)|(1<<httpSpecParserINPUTFILEREF)|(1<<httpSpecParserRESPONSEHANDLER)|(1<<httpSpecParserRESPONSEREF)|(1<<httpSpecParserMESSAGE))) != 0) {
		{
			p.SetState(36)
			p.Lines()
		}

		p.SetState(39)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// ILinesContext is an interface to support dynamic dispatch.
type ILinesContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsLinesContext differentiates from other interfaces.
	IsLinesContext()
}

type LinesContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyLinesContext() *LinesContext {
	var p = new(LinesContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = httpSpecParserRULE_lines
	return p
}

func (*LinesContext) IsLinesContext() {}

func NewLinesContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *LinesContext {
	var p = new(LinesContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = httpSpecParserRULE_lines

	return p
}

func (s *LinesContext) GetParser() antlr.Parser { return s.parser }

func (s *LinesContext) REQUESTLINE() antlr.TerminalNode {
	return s.GetToken(httpSpecParserREQUESTLINE, 0)
}

func (s *LinesContext) AllNEWLINE() []antlr.TerminalNode {
	return s.GetTokens(httpSpecParserNEWLINE)
}

func (s *LinesContext) NEWLINE(i int) antlr.TerminalNode {
	return s.GetToken(httpSpecParserNEWLINE, i)
}

func (s *LinesContext) AllHEADERFIELD() []antlr.TerminalNode {
	return s.GetTokens(httpSpecParserHEADERFIELD)
}

func (s *LinesContext) HEADERFIELD(i int) antlr.TerminalNode {
	return s.GetToken(httpSpecParserHEADERFIELD, i)
}

func (s *LinesContext) INPUTFILEREF() antlr.TerminalNode {
	return s.GetToken(httpSpecParserINPUTFILEREF, 0)
}

func (s *LinesContext) RESPONSEREF() antlr.TerminalNode {
	return s.GetToken(httpSpecParserRESPONSEREF, 0)
}

func (s *LinesContext) RESPONSEHANDLER() antlr.TerminalNode {
	return s.GetToken(httpSpecParserRESPONSEHANDLER, 0)
}

func (s *LinesContext) AllMESSAGE() []antlr.TerminalNode {
	return s.GetTokens(httpSpecParserMESSAGE)
}

func (s *LinesContext) MESSAGE(i int) antlr.TerminalNode {
	return s.GetToken(httpSpecParserMESSAGE, i)
}

func (s *LinesContext) AllNEWLINEWITHINDENT() []antlr.TerminalNode {
	return s.GetTokens(httpSpecParserNEWLINEWITHINDENT)
}

func (s *LinesContext) NEWLINEWITHINDENT(i int) antlr.TerminalNode {
	return s.GetToken(httpSpecParserNEWLINEWITHINDENT, i)
}

func (s *LinesContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *LinesContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *LinesContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(httpSpecListener); ok {
		listenerT.EnterLines(s)
	}
}

func (s *LinesContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(httpSpecListener); ok {
		listenerT.ExitLines(s)
	}
}

func (p *httpSpecParser) Lines() (localctx ILinesContext) {
	localctx = NewLinesContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, httpSpecParserRULE_lines)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.SetState(67)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case httpSpecParserREQUESTLINE:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(41)
			p.Match(httpSpecParserREQUESTLINE)
		}
		{
			p.SetState(42)
			p.Match(httpSpecParserNEWLINE)
		}

	case httpSpecParserHEADERFIELD:
		p.EnterOuterAlt(localctx, 2)
		p.SetState(47)
		p.GetErrorHandler().Sync(p)
		_alt = 1
		for ok := true; ok; ok = _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
			switch _alt {
			case 1:
				{
					p.SetState(43)
					p.Match(httpSpecParserHEADERFIELD)
				}
				p.SetState(45)
				p.GetErrorHandler().Sync(p)

				if p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 5, p.GetParserRuleContext()) == 1 {
					{
						p.SetState(44)
						p.Match(httpSpecParserNEWLINE)
					}

				}

			default:
				panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
			}

			p.SetState(49)
			p.GetErrorHandler().Sync(p)
			_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 6, p.GetParserRuleContext())
		}

	case httpSpecParserINPUTFILEREF:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(51)
			p.Match(httpSpecParserINPUTFILEREF)
		}
		{
			p.SetState(52)
			p.Match(httpSpecParserNEWLINE)
		}

	case httpSpecParserRESPONSEREF:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(53)
			p.Match(httpSpecParserRESPONSEREF)
		}
		{
			p.SetState(54)
			p.Match(httpSpecParserNEWLINE)
		}

	case httpSpecParserRESPONSEHANDLER:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(55)
			p.Match(httpSpecParserRESPONSEHANDLER)
		}
		{
			p.SetState(56)
			p.Match(httpSpecParserNEWLINE)
		}

	case httpSpecParserMESSAGE:
		p.EnterOuterAlt(localctx, 6)
		p.SetState(61)
		p.GetErrorHandler().Sync(p)
		_alt = 1
		for ok := true; ok; ok = _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
			switch _alt {
			case 1:
				{
					p.SetState(57)
					p.Match(httpSpecParserMESSAGE)
				}
				p.SetState(59)
				p.GetErrorHandler().Sync(p)

				if p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 7, p.GetParserRuleContext()) == 1 {
					{
						p.SetState(58)
						_la = p.GetTokenStream().LA(1)

						if !(_la == httpSpecParserNEWLINE || _la == httpSpecParserNEWLINEWITHINDENT) {
							p.GetErrorHandler().RecoverInline(p)
						} else {
							p.GetErrorHandler().ReportMatch(p)
							p.Consume()
						}
					}

				}

			default:
				panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
			}

			p.SetState(63)
			p.GetErrorHandler().Sync(p)
			_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 8, p.GetParserRuleContext())
		}

	case httpSpecParserNEWLINEWITHINDENT:
		p.EnterOuterAlt(localctx, 7)
		{
			p.SetState(65)
			p.Match(httpSpecParserNEWLINEWITHINDENT)
		}

	case httpSpecParserNEWLINE:
		p.EnterOuterAlt(localctx, 8)
		{
			p.SetState(66)
			p.Match(httpSpecParserNEWLINE)
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}
